// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-detail page 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects
        <!--default-->
      </a>
    </li>
    <!--if-->
    <!--if-->
    <li></li>
  </ul>
  <!--BreadCrumb-->
  <!--if-->
  <!--FlushPageDataLoading-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`project-detail page 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects
        <!--default-->
      </a>
    </li>
    <!--if-->
    <!--if-->
    <li>Test</li>
  </ul>
  <!--BreadCrumb-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\" class=\\"\\">Edit
          <!--default-->
        </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a href=\\"projects/1/delete\\" class=\\"project-delete-link\\">Delete
          <!--default-->
        </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">First chain</button>
    <!--if-->
    <!--Chain-->
    <button class=\\"project-chain\\">Second chain</button>
    <!--if-->
    <!--Chain-->
    <!--for-->
    <a class=\\"project-chain project-chain-create\\" href=\\"projects/1/chains/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--Info-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
